# task-manager

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
task_manager/: settings.py
